<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <Button
        android:id="@+id/connect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/connect_label"/>

    <Button
        android:id="@+id/manufacture_name_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_button"
        android:text="@string/manufacture_label" />

    <Button
        android:id="@+id/vibration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/manufacture_name_button"
        android:text="@string/vibration_label"/>

    <TextView
        android:id="@+id/result_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:layout_below="@id/vibration_button"
        android:padding="8dp"
        android:textSize="20sp"
        android:text="RESULT"/>

</RelativeLayout>
